tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-spaced-typed-memory-access.wyst
module legacy_spaced_typed_memory

fn bad(address: @u32) -> u32 {
    return u32 @ [address]
}
